// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrosswindLandingInputForm · runway condition row (ADR-0018) renders the closed-state picker showing the current selection (compact) 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "column",
        "gap": 16,
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
  testID="form-compact"
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Aircraft
    </Text>
    <View
      accessibilityLabel="Aircraft"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-aircraft"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="B787-8"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-aircraft-b787_8"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            B787-8
          </Text>
        </View>
        <View
          accessibilityLabel="B787-9"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-aircraft-b787_9"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            B787-9
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Runway condition
    </Text>
    <View
      accessibilityLabel="Runway condition"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": "Dry",
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "backgroundColor": "#11161F",
            "borderColor": "rgba(255, 255, 255, 0.08)",
            "minHeight": 44,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
        ]
      }
      testID="landing-runway"
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#E6EDF3",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        Dry
      </Text>
      <Text />
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Asymmetric Reverse Thrust
    </Text>
    <View
      accessibilityLabel="Asymmetric Reverse Thrust"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-asym-reverse"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="No"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-asym-reverse-no"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            No
          </Text>
        </View>
        <View
          accessibilityLabel="Yes"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-asym-reverse-yes"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Yes
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Landing
    </Text>
    <View
      accessibilityLabel="Landing"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-mode"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="Manual"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-mode-manual"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Manual
          </Text>
        </View>
        <View
          accessibilityLabel="Autoland"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 38,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-mode-auto"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 10,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Autoland
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CrosswindLandingInputForm · runway condition row (ADR-0018) renders the closed-state picker showing the current selection (regular) 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "column",
        "gap": 24,
        "justifyContent": "space-between",
      },
      {
        "flex": 1,
      },
    ]
  }
  testID="form-regular"
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Aircraft
    </Text>
    <View
      accessibilityLabel="Aircraft"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-aircraft"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="B787-8"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-aircraft-b787_8"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            B787-8
          </Text>
        </View>
        <View
          accessibilityLabel="B787-9"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-aircraft-b787_9"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            B787-9
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Runway condition
    </Text>
    <View
      accessibilityLabel="Runway condition"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": "Good (Slush, Dry Snow, Wet Snow)",
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "backgroundColor": "#11161F",
            "borderColor": "rgba(255, 255, 255, 0.08)",
            "minHeight": 72,
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
        ]
      }
      testID="landing-runway"
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#E6EDF3",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "500",
            },
          ]
        }
      >
        Good (Slush, Dry Snow, Wet Snow)
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#8B949E",
              "fontSize": 22,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        testID="landing-runway-chevron"
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Asymmetric Reverse Thrust
    </Text>
    <View
      accessibilityLabel="Asymmetric Reverse Thrust"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-asym-reverse"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="No"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-asym-reverse-no"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            No
          </Text>
        </View>
        <View
          accessibilityLabel="Yes"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-asym-reverse-yes"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            Yes
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Landing
    </Text>
    <View
      accessibilityLabel="Landing"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-mode"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="Manual"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-mode-manual"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            Manual
          </Text>
        </View>
        <View
          accessibilityLabel="Autoland"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-mode-auto"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            Autoland
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      CAT II-III (RVR less 350 m)
    </Text>
    <View
      accessibilityLabel="CAT II-III (RVR less 350 m)"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-cat-iiiii"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="No"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-cat-iiiii-no"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            No
          </Text>
        </View>
        <View
          accessibilityLabel="Yes"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-cat-iiiii-yes"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            Yes
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "600",
            "letterSpacing": 1,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      ONE ENG INOP
    </Text>
    <View
      accessibilityLabel="ONE ENG INOP"
      accessibilityRole="radiogroup"
      style={
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 4,
          "padding": 3,
        }
      }
      testID="landing-engine-inop"
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <View
          accessibilityLabel="No"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#00C2A8",
              },
              null,
            ]
          }
          testID="landing-engine-inop-no"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#001A17",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            No
          </Text>
        </View>
        <View
          accessibilityLabel="Yes"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 4,
                "flex": 1,
                "justifyContent": "center",
                "minHeight": 66,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
              null,
            ]
          }
          testID="landing-engine-inop-yes"
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#8B949E",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                },
                {
                  "fontWeight": "500",
                },
              ]
            }
          >
            Yes
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
